# aws-cryptographic-material-providers-library

./: .gitignore  .gitmodules  .prettierignore  .releaserc-java.cjs  .releaserc-net.cjs  .releaserc-python.cjs  .releaserc.cjs  CHANGELOG-dotnet.md  CHANGELOG-java.md  CHANGELOG-python.md  CHANGELOG.md  Makefile  README.md  SUPPORT_POLICY.rst  SharedMakefileV2.mk  allclasses-frame.html  allclasses-noframe.html  assume-ci-role.sh  aws-auth.sh  buildspec.yml  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  look_4_version.sh  overview-frame.html  overview-summary.html  overview-tree.html  package-list  project.properties  run_fuzz_tests.sh  serialized-form.html
AwsCryptographicMaterialProviders/runtimes/python/: .gitignore  .readthedocs.yaml  README.rst  park.cfg  pyproject.toml  tox.ini
AwsCryptographicMaterialProviders/runtimes/python/__main__-py/: AESEncryption.py  AlgorithmSuites.py  AwsCryptographyKeyStoreOperations.py  AwsKmsDiscoveryKeyring.py  AwsKmsUtils.py  Aws_mCryptography.py  DDBKeystoreOperations.py  DefaultClientSupplier.py  ExternDigest.py  IntermediateKeyWrapping.py  KMSKeystoreOperations.py  Keyring.py  Materials.py  MultiKeyring.py  RawAESKeyring.py  RequiredEncryptionContextCMM.py  Structure.py  TestIntermediateKeyWrapping.py  TestRawRSAKeying.py  TestStormTracker.py  TestUtils.py  TestVersionKey.py  WrappedHKDF.py  software_amazon_cryptography_internaldafny_SynchronizedLocalCMC.py  software_amazon_cryptography_keystore_internaldafny_types.py  software_amazon_cryptography_materialproviders_internaldafny.py  software_amazon_cryptography_materialproviders_internaldafny_types.py  software_amazon_cryptography_services_kms_internaldafny.py
AwsCryptographicMaterialProviders/runtimes/python/dafny_src-py/: AESEncryption.py  AlgorithmSuites.py  Aws.py  AwsArnParsing.py  AwsCryptographyKeyStoreOperations.py  AwsCryptographyMaterialProvidersOperations.py  AwsCryptographyPrimitivesOperations.py  AwsKmsDiscoveryKeyring.py  AwsKmsHierarchicalKeyring.py  AwsKmsKeyring.py  AwsKmsMrkAreUnique.py  AwsKmsMrkDiscoveryKeyring.py  AwsKmsMrkKeyring.py  AwsKmsMrkMatchForDecrypt.py  AwsKmsRsaKeyring.py  AwsKmsUtils.py  Aws_mCryptography.py  CMM.py  CanonicalEncryptionContext.py  Commitment.py  Constants.py  CreateKeyStoreTable.py  CreateKeys.py  DDBKeystoreOperations.py  DefaultCMM.py  DefaultClientSupplier.py  Defaults.py  Digest.py  DiscoveryMultiKeyring.py  EdkWrapping.py  ExternDigest.py  ExternRandom.py  GetKeys.py  HKDF.py  HMAC.py  IntermediateKeyWrapping.py  KMSKeystoreOperations.py  KdfCtr.py  Keyring.py  LocalCMC.py  (+26 more)
AwsCryptographicMaterialProviders/runtimes/python/doc/: conf.py  index.rst
AwsCryptographicMaterialProviders/runtimes/python/src/: __main__.py
AwsCryptographicMaterialProviders/runtimes/rust/: .gitignore  Cargo.toml  README.md  RELEASE.md  start_release.sh
AwsCryptographicMaterialProviders/runtimes/rust/src/: aes_gcm.rs  aes_kdf_ctr.rs  client.rs  dafny_libraries.rs  ddb.rs  deps.rs  digest.rs  ecdh.rs  ecdsa.rs  hmac.rs  impl_add.rs  kms.rs  lib.rs  local_cmc.rs  operation.rs  oslang.rs  random.rs  rsa.rs  sets.rs  software_externs.rs  storm_tracker.rs  time.rs  timer.rs  types.rs  uuid.rs  wrapped.rs
AwsCryptographicMaterialProviders/runtimes/rust/tests/: local_cmc_tests.rs
AwsCryptographyPrimitives/runtimes/python/: pyproject.toml  tox.ini
AwsCryptographyPrimitives/runtimes/python/__main__-py/: AESEncryption.py  ConstantTime.py  ExternDigest.py  ExternRandom.py  TestAwsCryptographyPrimitivesAesKdfCtr.py  TestAwsCryptographyPrimitivesHKDF.py  TestAwsCryptographyPrimitivesRSA.py  TestKDFK__TestVectors.py  module_.py
AwsCryptographyPrimitives/runtimes/python/dafny_src-py/: RSAEncryption.py  Random.py  software_amazon_cryptography_primitives_internaldafny.py  software_amazon_cryptography_primitives_internaldafny_types.py
AwsCryptographyPrimitives/runtimes/python/test/: test_ECDH_exceptions.py  test_exceptions.py
AwsCryptographyPrimitives/runtimes/rust/: .gitignore  Cargo.toml  copy_externs.sh  fix.sh  impl_header.txt
AwsCryptographyPrimitives/runtimes/rust/src/: aes_gcm.rs  aes_kdf_ctr.rs  digest.rs  ecdh.rs  ecdsa.rs  hmac.rs  implementation_from_dafny.rs  lib.rs  random.rs  rsa.rs
ComAmazonawsDynamodb/runtimes/python/: .gitignore  pyproject.toml  tox.ini
ComAmazonawsDynamodb/runtimes/rust/: .gitignore  Cargo.toml  copy_externs.sh
ComAmazonawsDynamodb/runtimes/rust/src/: ddb.rs  lib.rs
ComAmazonawsKms/runtimes/python/: pyproject.toml  tox.ini
ComAmazonawsKms/runtimes/python/smithygenerated/: pyproject.toml
ComAmazonawsKms/runtimes/rust/: .gitignore  Cargo.toml  copy_externs.sh
ComAmazonawsKms/runtimes/rust/src/: kms.rs  lib.rs
StandardLibrary/runtimes/python/: .gitignore  dafnyruntimepython-4.10.1-py3-none-any.whl  pyproject.toml  tox.ini
StandardLibrary/runtimes/python/__main__-py/: BoundedInts.py  ConcurrentCall.py  FloatCompare.py  FloatCompareTest.py  Functions.py  HexStrings.py  Math.py  Relations.py  Seq.py  Seq_mMergeSort.py  Sets.py  SortedSets.py  StandardLibrary.py  StandardLibrary_mUInt.py  TestCallMany.py  TestHexStrings.py  TestSeqReaderReadElements.py  TestTime.py  TestUTF8.py  TestUUID.py  Time.py  UTF8.py  UUID.py  module_.py
StandardLibrary/runtimes/python/dafny_src-py/: Actions.py  Base64.py  Base64Lemmas.py  BoundedInts.py  ConcurrentCall.py  DafnyLibraries.py  DivInternals.py  DivInternalsNonlinear.py  DivMod.py  FileIO.py  FloatCompare.py  Functions.py  GeneralInternals.py  HexStrings.py  JSON.py  JSON_ConcreteSyntax.py  JSON_Utils.py  JSON_Utils_Str.py  JSON_Utils_Str_CharStrEscaping.py  JSON_Utils_Views.py  JSON_ZeroCopy_Deserializer_Arrays.py  JSON_ZeroCopy_Deserializer_Objects.py  JSON_mAPI.py  JSON_mConcreteSyntax.py  (+64 more)
StandardLibrary/runtimes/rust/: .gitignore  Cargo.toml  copy_externs.sh  fix.sh  impl_header.txt
TestVectorsAwsCryptographicMaterialProviders/runtimes/python/: .coverage  .gitignore  DESIGN.md  FUZZING.md  fuzz_generator.py  fuzz_manifest.json  keys.json  manifest.json  old_manifest.json  pyproject.toml  to_test_manifest.json  tox.ini
(+5893 files in other folders)
