[tool.poetry]
name = "aws-cryptographic-materialproviders"
version = "0.1.1"
description = "AWS Cryptographic Material Providers Library for Python"
authors = ["AWS Crypto Tools <aws-crypto-tools@amazon.com>"]
packages = [
    { include = "aws_cryptographic_materialproviders", from = "src" },
]
# Include generated internaldafny files in package distributions,
# even though they are not included in version control
include = ["**/internaldafny/generated/*.py"]
# Append overall package README to Python-specific README
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11.0"
aws-cryptography-internal-standard-library = "~0.1.0"
aws-cryptography-internal-kms = "~0.1.0"
aws-cryptography-internal-dynamodb = "~0.1.0"
aws-cryptography-internal-primitives = "~0.1.0"

# Package testing

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

# Package release

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
poetry = "1.8.3"
twine = "5.1.1"
wheel = "0.38.4"

# Package documentation

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
myst-parser = "^4"
sphinx = "^7"
sphinx_rtd_theme = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
