[tool.poetry]
name = "aws-cryptographic-material-providers"
version = "1.11.2"
description = "AWS Cryptographic Material Providers Library for Python"
authors = ["AWS Crypto Tools <aws-crypto-tools@amazon.com>"]
packages = [
    { include = "aws_cryptographic_material_providers", from = "src" },
]
# Include generated internaldafny files in package distributions,
# even though they are not included in version control
include = ["src/aws_cryptographic_material_providers/internaldafny/generated/*.py"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11.0"
aws-cryptography-internal-standard-library = {path = "../../../StandardLibrary/runtimes/python"}
aws-cryptography-internal-kms = {path = "../../../ComAmazonawsKms/runtimes/python"}
aws-cryptography-internal-dynamodb = {path = "../../../ComAmazonawsDynamodb/runtimes/python"}
aws-cryptography-internal-primitives = {path = "../../../AwsCryptographyPrimitives/runtimes/python"}

# Package testing

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.4,<10.0"

# Package release

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
poetry = "2.4.1"
twine = "6.2.0"
wheel = "0.47.0"

# Package documentation

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
myst-parser = "^4"
sphinx = "^7"
sphinx_rtd_theme = ">=2,<4"

[build-system]
requires = ["poetry-core<2.0.0"]
build-backend = "poetry.core.masonry.api"
