[package]
name = "mpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wrapped-client = []

[dependencies]
aws-lc-rs = "1.8.1"
aws-lc-sys = "0.20.1"
aws-sdk-dynamodb = "1.45.0"
aws-sdk-kms = "1.43.0"
aws-config = "1.5.4"
aws-types = "1.3.3"
aws-smithy-runtime = {version = "1.6.0", features = ["client"] }
aws-smithy-runtime-api = {version = "1.7.0", features = ["client"] }
aws-smithy-types = "1.2.0"
dafny_runtime = { path = "../../../../smithy-dafny/TestModels/dafny-dependencies/dafny_runtime_rust"}
pem = "3.0.4"
chrono = "0.4.38"
dashmap = "6.0.1"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
mpl = { path = ".", features = ["wrapped-client"] }

[dependencies.tokio]
version = "1.26.0"
features = ["full"]

[lib]
path = "src/implementation_from_dafny.rs"
