[package]
name = "aws-mpl-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
keywords = ["crypto", "cryptography", "security", "encryption", "client-side", "clientside"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-mpl-rs is a low level library for implementing client side encryption."
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-mpl-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.11"
aws-lc-rs = "1.12.0"
aws-lc-sys = "0.24.0"
aws-sdk-dynamodb = "1.55.0"
aws-sdk-kms = "1.51.0"
aws-smithy-runtime-api = {version = "1.7.3", features = ["client"] }
aws-smithy-types = "1.2.10"
chrono = "0.4.39"
cpu-time = "1.0.0"
dafny_runtime = { path = "../../../smithy-dafny/TestModels/dafny-dependencies/dafny_runtime_rust", features = ["sync"]}
dashmap = "6.1.0"
pem = "3.0.4"
tokio = {version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
timeout = "0.1.0"
rand = "0.8.5"
futures = "0.3"
