[package]
name = "aws-mpl-legacy"
version = "0.1.0"
rust-version = "1.88.0"
edition = "2021"
keywords = ["crypto", "cryptography", "security", "encryption", "client-side"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-mpl-legacy is a low level library for implementing client side encryption."
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-mpl-legacy"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.12"
aws-lc-rs = {version = "1.15.2"}
aws-lc-sys = { version = "0.35", optional = true }
aws-lc-fips-sys = { version = "0.13", optional = true }
aws-sdk-dynamodb = "1.101.0"
aws-sdk-kms = "1.97.0"
aws-smithy-runtime-api = {version = "1.9.3", features = ["client"] }
aws-smithy-types = "1.3.5"
chrono = "0.4.42"
cpu-time = "1.0.0"
dashmap = "6.1.0"
pem = "3.0.6"
tokio = {version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
timeout = "0.1.0"
rand = "0.9.2"
futures = "0.3"
dafny-runtime = { version = "0.3.1", features = ["sync", "small-int"] }

[features]
fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
default = ["non-fips"]

