[tool.poetry]
name = "aws-cryptography-internal-primitives"
version = "0.1.0"
description = ""
authors = ["AWS Crypto Tools <aws-crypto-tools@amazon.com>"]
packages = [
    { include = "aws_cryptography_primitives", from = "src" }
]
# Include generated internaldafny files in package distributions,
# even though they are not included in version control
include = ["**/internaldafny/generated/*.py"]

[tool.poetry.dependencies]
python = "^3.11.0"
aws-cryptography-internal-standard-library = {path = "../../../StandardLibrary/runtimes/python", develop = false}
cryptography = "^41.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pyasn1 = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
