[tool.poetry]
name = "aws-cryptography-internal-primitives"
version = "1.11.2"
description = ""
authors = ["AWS Crypto Tools <aws-crypto-tools@amazon.com>"]
packages = [
    { include = "aws_cryptography_primitives", from = "src" }
]
# Include generated internaldafny files in package distributions,
# even though they are not included in version control
include = ["src/aws_cryptography_primitives/internaldafny/generated/*.py"]

[tool.poetry.dependencies]
python = "^3.11.0"
aws-cryptography-internal-standard-library = {path = "../../../StandardLibrary/runtimes/python"}
cryptography = ">=49.0.0,<50"

# Package testing

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.1.1"
pyasn1 = "^0.6.4"

# Package release

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
poetry = "2.4.1"
twine = "6.2.0"
wheel = "0.47.0"

[build-system]
requires = ["poetry-core<2.0.0"]
build-backend = "poetry.core.masonry.api"
