[package]
name = "aws-mpl-primitives"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.6.2"
aws-lc-rs = "1.13.0"
aws-lc-sys = "0.28.2"
aws-smithy-runtime-api = "1.8.0"
aws-smithy-types = "1.3.1"
chrono = "0.4.41"
cpu-time = "1.0.0"
dafny_runtime = { path = "../../../smithy-dafny/TestModels/dafny-dependencies/dafny_runtime_rust", features = ["sync","small-int"]}
dashmap = "6.1.0"
pem = "3.0.5"
tokio = {version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
