[package]
name = "aws-mpl-primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.12"
aws-lc-rs = {version = "1.15.2"}
aws-lc-sys = { version = "0.35", optional = true }
aws-lc-fips-sys = { version = "0.13", optional = true }
aws-smithy-runtime-api = "1.9.3"
aws-smithy-types = "1.3.5"
chrono = "0.4.42"
cpu-time = "1.0.0"
dafny_runtime = { path = "../../../smithy-dafny/TestModels/dafny-dependencies/dafny_runtime_rust", features = ["sync","small-int"]}
dashmap = "6.1.0"
pem = "3.0.6"
tokio = {version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }

[features]
fips = ["aws-lc-rs/fips", "dep:aws-lc-fips-sys"]
non-fips = ["aws-lc-rs/aws-lc-sys", "dep:aws-lc-sys"]
default = ["non-fips"]
