[tool.poetry]
name = "aws-cryptography-internal-dynamodb"
version = "1.11.2"
description = ""
authors = ["AWS Crypto Tools <aws-crypto-tools@amazon.com>"]
packages = [
    { include = "aws_cryptography_internal_dynamodb", from = "src" }
]
# Include generated internaldafny files in package distributions,
# even though they are not included in version control
include = ["src/aws_cryptography_internal_dynamodb/internaldafny/generated/*.py"]

[tool.poetry.dependencies]
python = "^3.11.0"
boto3 = "^1.43.32"
aws-cryptography-internal-standard-library = {path = "../../../StandardLibrary/runtimes/python"}
# Package testing

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.1.0"

# Package release

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
poetry = "1.8.4"
twine = "6.2.0"
wheel = "0.47.0"

[build-system]
requires = ["poetry-core<2.0.0"]
build-backend = "poetry.core.masonry.api"
