[package]
name = "aws-mpl-ddb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.103.0"
aws-smithy-runtime-api = "1.10.0"
aws-smithy-types = "1.3.6"
chrono = "0.4.43"
cpu-time = "1.0.0"
dafny_runtime = { path = "../../../smithy-dafny/TestModels/dafny-dependencies/dafny_runtime_rust", features = ["sync","small-int"]}
dashmap = "6.1.0"
tokio = {version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
