[tool.poetry]
name = "aws-cryptography-internal-standard-library"
version = "1.11.2"
description = ""
authors = ["AWS Crypto Tools <aws-crypto-tools@amazon.com>"]
packages = [
    { include = "smithy_dafny_standard_library", from = "src" },
    # TODO: Depend on PyPi once Smithy-Python publishes their Python package there
    { include = "smithy_python", from = "libs/aws-cryptography-internal-smithy-python" },
]
# Include generated internaldafny files in package distributions,
# even though they are not included in version control
include = [
    "src/smithy_dafny_standard_library/internaldafny/generated/*.py",
]

[tool.poetry.dependencies]
python = "^3.11.0"
pytz = ">=2026.2,<2027.0.0"
# TODO: Longer-term, write something to pull this in from the project's project.properties file
DafnyRuntimePython = "4.11.0"

# Package testing

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.1.0"

# Package release

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
poetry = "1.8.4"
twine = "6.2.0"
wheel = "0.47.0"

[build-system]
requires = ["poetry-core<2.0.0"]
build-backend = "poetry.core.masonry.api"
