[package]
name = "mpl_standard_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-runtime = {version = "1.6.0", features = ["client"] }
aws-smithy-runtime-api = {version = "1.7.0", features = ["client"] }
aws-smithy-types = "1.2.0"
chrono = "0.4.38"
dafny_runtime = { path = "./dafny_runtime_rust"}
dashmap = "6.0.1"
uuid = { version = "1.10.0", features = ["v4"] }
tokio = { version = "1.26.0", features = ["full"] }

[lib]
path = "src/implementation_from_dafny.rs"
