[tool.poetry]
name = "aws-cryptography-internal-mpl-testvectors"
version = "0.1.0"
description = ""
authors = ["AWS Crypto Tools <aws-crypto-tools@amazon.com>"]
packages = [
    { include = "aws_cryptography_materialproviders_test_vectors", from = "src" }
]
# Include generated internaldafny files in package distributions,
# even though they are not included in version control
include = ["**/internaldafny/generated/*.py"]

[tool.poetry.dependencies]
python = "^3.11.0"
boto3 = "^1.28.38"
aws-cryptographic-materialproviders = { path = "../../../AwsCryptographicMaterialProviders/runtimes/python", develop = false}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
