[tool.poetry]
name = "amazon-cryptographic-material-providers-test-vectors-test-internaldafny"
version = "0.1.0"
description = ""
authors = ["AWS <aws-arg-dafny@amazon.com>"]
packages = [
    # Globally install all internaldafny modules
    # such that a module X can be imported with `import X`
    # from anywhere in the Python runtime that installs this module
    { include = "*.py", from = "generated" },
]
# Include all of the following .gitignored files in package distributions,
# even though it is not included in version control
include = ["generated/*.py"]

[tool.poetry.dependencies]
python = "^3.11.0"
# aws-cryptography-primitives-internaldafny = { path = "../../../../../AwsCryptographyPrimitives/runtimes/python/aws_cryptography_primitives/internal_generated_dafny", develop = false}
mpl-internaldafny = { path = "../../../../../AwsCryptographicMaterialProviders/runtimes/python/src/aws_cryptography_materialproviders/internaldafny", develop = false}
keystore-internaldafny = { path = "../../../../../AwsCryptographicMaterialProviders/runtimes/python/src/aws_cryptography_keystore/internaldafny", develop = false}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"