[tool.poetry]
name = "mpl-internaldafny"
version = "0.1.0"
description = ""
authors = ["AWS <aws-arg-dafny@amazon.com>"]
packages = [
    # Globally install all internaldafny modules
    # such that a module X can be imported with `import X`
    # from anywhere in the Python runtime that installs this module
    { include = "*.py", from = "generated" },
]
# Include all of the following .gitignored files in package distributions,
# even though they are not included in version control.
# Poetry will exclude .gitignored files from package distributions by default.
include = ["generated/*.py"]

[tool.poetry.dependencies]
python = "^3.11.0"
# TODO-Python: This fixes a race condition in internalDafny installs,
# but is a symptom of 1) Dafny is generating code for both keystore and MPL inside MPL,
# and 2) installing/writing files to a global install.
# Resolving this dependency statement involves resolving those issues.
keystore-internaldafny = { path = "../../aws_cryptography_keystore/internaldafny", develop = false}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"